# webinar_axumcrud

./: .env  Cargo.toml  Dockerfile  README.md  compose.yaml
migrations/: 20231002035216_initial.sql
src/: db.rs  index.html  main.rs  rest.rs  view.rs
